<resources>
    <string name="app_name">MY TRAINING</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_montarex">Montar Exercicios</string>
    <string name="menu_fotos">Tirar Fotos</string>
    <string name="menu_conta">Editar Perfil</string>
    <string name="menu_Plano">Meu Plano</string>
    <string name="menu_share">Meus Exercicios</string>
    <string name="menu_send">Planos</string>
</resources>
