<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_montarexercicio"
                android:icon="@drawable/fundo_avatar_frente"
                android:title="@string/menu_montarex"/>
        <item
                android:id="@+id/nav_tirarfotos"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_fotos"/>
        <item
                android:id="@+id/nav_exibirperfil"
                android:icon="@drawable/senha_text_icon"
                android:title="@string/menu_conta"/>
        <item
                android:id="@+id/nav_meusplano"
                android:icon="@drawable/common_full_open_on_phone"
                android:title="@string/menu_Plano"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_meusexercicios"
                    android:icon="@drawable/fundo_avatar_costa"
                    android:title="@string/menu_share"/>
            <item
                    android:id="@+id/nav_planos"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_send"/>
        </menu>
    </item>

</menu>
